2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in: Remove superfluous echos and add rule to create
	libdfp-test-ulps.h file.
	(libdfp_c_tests): Add log tests.
	* sysdeps/generic/libdfp-test-ulps: New file.
	* sysdeps/powerpc/dfpu/libdfp-test-ulps: New file.
	* sysdeps/powerpc/fpu/libdfp-test-ulps: New file.
	* tests/gen-libdfp-tests.py: Add support to test with ULPs.
	* tests/gen-libdfp-ulps.py: New file: script to generate the ULP
	file definitions.
	* tests/libdfp-test.c: New file: common definitions for tests.
	* tests/log.input: New file: log test input.
	* tests/test-logd.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/scaffold.c: Remove compiler warning.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-numdigits.c: Remove bogus testcase.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-getexp.c: Fix constant.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* tests/test-decode.c: Indent correction.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Rename test-round to test-fenv.
	* tests/test-round.c: Move from ...
	* tests/test-fenv.c: ... to here.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Remove test-GCC-PR52140, test-negate,
	test-param, and test-stdlib.
	* tests/test-GCC-PR52140.c: Remove.
	* tests/test-negate.c: Remove.
	* tests/test-param.c: Remove.
	* tests/test-stdlib.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add quantize new tests.
	* tests/quantize.input: New file: quantize new tests input.
	* tests/test-quantize.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add fpclassify new tests.
	* tests/fpclassify.input: New file: fpclassify new tests input.
	* tests/test-fpclassify.c: Remove.
