@@ -1,0 +1,19 @@
+# name exp
+# arg1 decimal
+# ret  decimal
+
+0                          1
+-0                         1
+1                          2.718281828459045235360287471352662
+2                          7.389056098930650227230427460575008
+3                          20.08553692318766774092852965458172
+0.75                       2.117000016612674668545369819837096
+50.0                       5184705528587072464087.453322933485
+88.72269439697265625       3.402331266231607749375541347722904e+38
+709.75                     1.73983687326416055769825271167383e+308       decimal64 decimal128
+
+
+NaN                        NaN
+sNaN                       NaN
+Inf                        Inf
+-Inf                       0.0
